package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_googleapis_imports//:imports.bzl", "proto_library_with_info")

proto_library(
    name = "run_proto",
    srcs = [
        "common.proto",
        "services.proto",
        "routes.proto",
        "revisions.proto",
        "domain_mappings.proto",
        "configurations.proto",
        "authorized_domains.proto",
        "metav1.proto",
        "corev1.proto",
    ],
    deps = [
        "//google/iam/v1:iam_policy_proto",
        "//google/iam/v1:policy_proto",
        "//google/api:field_behavior_proto",
        "//google/api:client_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library_with_info(
    name = "run_proto_with_info",
    deps = [
        ":run_proto",
        "//google/cloud:common_resources_proto",
    ],
)

load( "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
)

go_proto_library(
    name = "run_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "google.golang.org/genproto/googleapis/cloud/run/v1",
    protos = [":run_proto"],
    deps = [
        "//google/iam/v1:iam_go_proto",
        "//google/api:annotations_go_proto",
    ],
)

go_gapic_library(
    name = "run_go_gapic",
    srcs = [":run_proto_with_info"],
    grpc_service_config = "run_grpc_service_config.json",
    importpath = "cloud.google.com/go/run/apiv1;run",
    service_yaml = "cloudrun.yaml",
    deps = [
        ":run_go_proto",
        "//google/iam/v1:iam_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

go_test(
    name = "run_go_gapic_test",
    srcs = [":run_go_gapic_srcjar_test"],
    embed = [":run_go_gapic"],
    importpath = "cloud.google.com/go/run/apiv1",
)